# aegis-sovereign-node-app

./: .gitignore  README.md  package-lock.json
.github/workflows/: release-installers.yml  release.yml
cli/: README.md  package-lock.json  package.json  tsconfig.json
cli/src/: index.ts  server.ts
cli/src/modules/: config.ts  downloader.ts  install.ts  manifest.ts  paths.ts  process.ts  rpc.ts  start.ts  status.ts  stop.ts  update.ts
desktop/: README.md  package-lock.json  package.json
desktop/scripts/: patch-android-build.mjs  sync-frontend-bundle.mjs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  security.rs  server.rs
docs/: OPERATIONAL_SECURITY.md  THREAT_MODEL.md  architecture.md  release-checklist.md  sonic-node-setup.md
mobile/: README.md
shared/: README.md  config.convenience.json  config.example.json
shared/scripts/: generate-circuit-manifest.mjs
